* Fix column gap of filters at Statistics view

--- a/src/view/Views/Statistics/style.scss
+++ b/src/view/Views/Statistics/style.scss
@@ -1,6 +1,7 @@
 /* Filters */
 .filters-container {
   flex-flow: row wrap;
+  column-gap: 24px;
 }
 
 .trans-type-filter {
